# app

./: .gitignore  Cargo.toml  memory.x  openocd.gdb  scatterpolt.py
.cargo/: #config#
src/: #lib.rs#  lib.rs  main.rs
