[package]
authors = ["zhenkyle <zhenkyle@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "app"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
f3 = { git = "https://github.com/tkeksa/f3.git" }
# Uncomment for the panic example.
panic-itm = "0.4.1"
heapless = "0.5.3"
m = "0.1.1"
embedded-graphics = "0.6.0-beta.1"
#ssd1306 = "0.3.0-alpha.4"
ssd1306 = { version = "0.3.0-alpha.4", git = "https://github.com/jamwaffles/ssd1306" }
[dependencies.stm32f3xx-hal]
#git = "https://github.com/stm32-rs/stm32f3xx-hal.git"
path = "../../build/stm32f3xx-hal"
features = ["stm32f303"]

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[lib]
name = "app"
test = false
bench = false

[[bin]]
name = "app"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
